Jann 30/objects/RequestNotes__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ITPR__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ITSES</label>
        <referenceTo>ITPR__c</referenceTo>
        <relationshipLabel>IT-SES Status Notes</relationshipLabel>
        <relationshipName>Request_Notes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>IT-SES Status Notes</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IT-SES Status Notes</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>